--- a/views/partials/template/back.ejs
+++ b/views/partials/template/back.ejs
@@ -6,6 +6,7 @@
                 <span class="sr-only"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="pull-brand" href="/"><img src="images/quizMakerLogoBrand.png" class="img-responsive" alt="Chalkboard"></a>
         </div>
@@ -13,6 +14,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/takequiz">Take Quiz</a></li>
                 <li><a href="/userresults">Results</a></li>
+                <li><a href="/">Log Out</a></li>
                 
             </ul>
         </div><!-- navbar-collapes -->
