--- a/views/partials/template/navigationuser.ejs
+++ b/views/partials/template/navigationuser.ejs
@@ -7,6 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="pull-brand" href="/"><img src="images/quizMakerLogoBrand.png" class="img-responsive" alt="Chalkboard"></a>
         </div>
@@ -15,6 +16,7 @@
                 <li><a href="/takequiz">Take Quiz</a></li>
                 <li><a href="/userresults">Results</a></li>
                 <li><a href="/userprofile">Profile</a></li>
+                <li><a href="/">Log Out</a></li>
             </ul>
         </div><!-- navbar-collapes -->
     </div><!-- container-fluid -->
