--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,7 +11,7 @@
 <div class="container text-center">
     <% include partials/template/navigationadmin.ejs %>
     <div class="row">
-        <h1>Welcome!</h1>
+        <h1>Welcome</h1>
     </div><!-- span12 -->
     <% include partials/template/footer.ejs %>
 </div><!-- container -->
